--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="news_adjust">
                 <p class="news_text">News</p>
                 <article class="news_box">
-                    <div class="news_image" id="news_image">
+                    <div class="news_image" id="gentoo">
                         <a class="news_image_link" href="./pages/gentoo.html">
                             <img class="news_image_post" src="assets/images/gentoo.svg">
                         </a>
@@ -61,7 +61,7 @@
                     </div>
                 </article>
                 <article class="">
-                    <div class="news_image" id="news_image1">
+                    <div class="news_image" id="html">
                         <a class="news_image_link" href="./pages/html.html">
                             <img class="news_image_post" src="assets/images/html.png">
                         </a>
@@ -73,7 +73,7 @@
                     </div>
                 </article>
                 <article class="">
-                    <div class="news_image" id="news_image2">
+                    <div class="news_image" id="arch">
                         <a class="news_image_link" href="./pages/arch.html">
                             <img class="news_image_post" src="assets/images/arch.png">
                         </a>
@@ -85,7 +85,7 @@
                     </div>
                 </article>
                 <article class="">
-                    <div class="news_image" id="news_image3">
+                    <div class="news_image" id="css">
                         <a class="news_image_link" href="./pages/css.html">
                             <img class="news_image_post" src="assets/images/css.svg">
                         </a>
