--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
                             <img src="assets/images/thumb.png" class="trending_image">
                         </a>
                         <h2><a href="" class="trending_tile_link">Configuration Gentoo</a></h2>
+                        <div class="trending_description">
+                            <p class="trending_text">The tutorial about how to configure gentoo, w/ new visual and new settings.</p>
+                            <hr>
+                            <p class="trending_text trending_text_autor">By Jabuxas, December 1, 2022</p>
+                        </div>
                     </nav>
                     <nav class="trending_thumb" id="gentoo">
                         <a href="">
@@ -115,7 +120,9 @@
                         </a>
                         <h2><a href="" class="trending_tile_link">Javascript Functions</a></h2>
                         <div class="trending_description">
-                            <p class="trending_text"></p>
+                            <p class="trending_text">The tutorial about how to use function in javascript, with a few examples.</p>
+                            <hr>
+                            <p class="trending_text trending_text_autor">By Akyua, December 1, 2022</p>
                         </div>
                     </nav>
                 </article>
