Add redirect to onclick in trendings and adjust somethings

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="trending_adjust">
                 <h2 class="trending_title">Trending</h2>
                 <article class="trending_box">
-                    <nav class="trending_thumb" id="gentoo">
+                    <nav class="trending_thumb" id="trending1">
                         <a href="">
                             <img src="assets/images/thumb.png" class="trending_image">
                         </a>
@@ -114,7 +114,7 @@
                             <p class="trending_text trending_text_autor">By Jabuxas, December 1, 2022</p>
                         </div>
                     </nav>
-                    <nav class="trending_thumb" id="gentoo">
+                    <nav class="trending_thumb" id="trending2">
                         <a href="">
                             <img src="assets/images/thumbjs.jpg" class="trending_image">
                         </a>
@@ -129,6 +129,7 @@
             </div>
         </section>
         <script src="js/divnews.js"></script> 
+        <script src="js/divtrending.js"></script> 
       </main>
       <footer class="footer">
         <div class="footer_adjust">
