--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="./css/trending.css">
       <link rel="stylesheet" href="./css/footer.css">
   </head>
-  <body>
+  <body id="home">
       <header class="menu">
           <div class="central">
               <div class="logo">
@@ -133,10 +133,13 @@
       </main>
       <footer class="footer">
         <div class="footer_adjust">
-            <nav class="footer_developers">
-                <p class="footer_text">Developed by: <a href=https://github.com/akyua class="footer_link">Akyua</a> and <a href=https://github.com/jabuxas class="footer_link">Jabuxas</a></p>
-            </nav>
-            <p class="copyright">&copy; Copyright DarkZone Blog - 2022</p>
-    </footer>
+            <div class="footer_adjust_layer">
+                <nav class="footer_developers">
+                    <p class="footer_text">Developed by: <a href=https://github.com/akyua class="footer_link">Akyua</a> and <a href=https://github.com/jabuxas class="footer_link">Jabuxas</a></p>
+                </nav>
+                <p class="copyright">&copy; Copyright DarkZone Blog - 2022</p>
+            </div>
+        </div>
+      </footer>
   </body>
 </html>
