Adjust margin in the header and put on title main in the center

--- a/pages/gentoo.html
+++ b/pages/gentoo.html
@@ -38,7 +38,7 @@
         </div>
       </section>
       <div class="container">
-        <h1 class="title">Gentoo Quick Installation Guide</h1>
+        <h1 class="title title_main">Gentoo Quick Installation Guide</h1>
         <p class="disclaimer">Disclaimer: This is not an official guide to installing Gentoo. This is a short guide made for those who want a quick install and have knowledge about how Gentoo works.</p>
         <h3 class="title">Introduction</h3>
         <p>
