Fix margins and paddings and adjust title

--- a/pages/gentoo.html
+++ b/pages/gentoo.html
@@ -38,16 +38,19 @@
         </div>
       </section>
       <div class="container">
-        <h1 class="title title_main">Gentoo Quick Installation Guide</h1>
-        <p class="disclaimer">Disclaimer: This is not an official guide to installing Gentoo. This is a short guide made for those who want a quick install and have knowledge about how Gentoo works.</p>
-        <h3 class="title">Introduction</h3>
-        <p>
-          This is a guide <em>I would use</em> for installing Gentoo with systemd
-          <a href="https://www.freedesktop.org/wiki/Software/systemd/TheCaseForTheUsrMerge/">(merged-usr)</a>
-          as the init system of choice to the amd64 architecture (uefi).
-        </p>
-        <p>If you've stumbled upon this and you really want support and precise help, you should probably join Gentoo's IRC channel or Discord</p>
-
+        <div id="title">
+          <h1 class="title title_main">Gentoo Quick Installation Guide</h1>
+          <p class="disclaimer">Disclaimer: This is not an official guide to installing Gentoo. This is a short guide made for those who want a quick install and have knowledge about how Gentoo works.</p>
+        </div>  
+        <div class="introduction">
+          <h3 class="title">Introduction</h3>
+          <p>
+            This is a guide <em>I would use</em> for installing Gentoo with systemd
+            <a href="https://www.freedesktop.org/wiki/Software/systemd/TheCaseForTheUsrMerge/">(merged-usr)</a>
+            as the init system of choice to the amd64 architecture (uefi).
+          </p>
+          <p>If you've stumbled upon this and you really want support and precise help, you should probably join Gentoo's IRC channel or Discord</p>
+        </div>
         <div id="partitioning">
           <h2 class="title">Chapter One: Partitioning.</h2>
           <p>If you're not a complete beginner to linux, you should know how to partition your drives, so I'll make it quick.</p>
