Add media query of tablets/1440p in all pages/fix write text

--- a/pages/html.html
+++ b/pages/html.html
@@ -50,7 +50,7 @@
             </div>
             <div id="partitioning">
                 <h2 class="title">Chapter One: Documents</h2>
-                <p>In all codes of html, we have in the first, what version the code is using and the tag utilized is: <span><</span>!DOCTYPE html<span>></span>.</p>
+                <p>In all codes of html, we have in the first, what version the code is using and the tag utilized is: <span><</span>!DOCTYPE html<span>></span> (In this case, only html with doctype means the code is using the last version of html).</p>
                 <p>Other important thing is the code need to be inside of the tag <span><</span>html<span>></span>, and in the end need close the tag with <span><</span>/html<span>></span></p>
             </div>
         </div>
