Add content of the html guide and settings better the names of archives

--- a/pages/html.html
+++ b/pages/html.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/gentoo.css" />
+    <link rel="stylesheet" href="../css/pages.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <title>HTML Tutorial</title>
   </head>
@@ -48,10 +48,22 @@
                 HTML is a short name to HyperText Markeup Language. It's mean not a programming language, and yes a language of markeup.
               </p>
             </div>
-            <div id="partitioning">
+            <div id="documents">
                 <h2 class="title">Chapter One: Documents</h2>
                 <p>In all codes of html, we have in the first, what version the code is using and the tag utilized is: <span><</span>!DOCTYPE html<span>></span> (In this case, only html with doctype means the code is using the last version of html).</p>
                 <p>Other important thing is the code need to be inside of the tag <span><</span>html<span>></span>, and in the end need close the tag with <span><</span>/html<span>></span></p>
+            </div>
+            <div class="structures">
+                <h2 class="title">Chapter Two: Structures</h2>
+                <p>The structure of HTML starts in documents, as explained above. But, in HTML we have most others types of structures.</p>
+                <p>The next part, we use the tag <span><</span>head<span>></span>, inside this tag, will write things that we call metadata. It's infos where the user don't see, but the computers/browsers use to better reading and navegation.</p>
+                <p>After this, we have the tag <span><</span>body<span>></span>, in this tag will all content where the user will see.</p>
+                <p>Besides HTML have others tags of structures, where we use to division parts of the HTML, as <span><</span>header<span>></span> where it's logins, toolbar, logos. Other part is the final of a site, where call <span><</span>footer<span>></span>, in this part it's the last contents, as copyright, credits, social medias.</p>
+              </div>
+            <div class="head">
+              <h2 class="title">Chapter Three: Head</h2>
+              <p>As mentioned above, the tag head is the local where is the metadatas of a web site. But we will see what have inside this tag.</p>
+              <p>Tags Meta: This tag have multiples variants, but will write the principal metas. Meta charset: inside of this tag, we will write what timezone of the region where the web site will use of the users. This is for understand what characteres can to be utilize in website.</p>
             </div>
         </div>
     </main>
