Create var's and att new fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Dark Zone</title>
       <link rel="stylesheet" href="./css/reset.css">
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="./css/header.css">
       <link rel="stylesheet" href="./css/styles.css">
       <link rel="stylesheet" href="./css/search.css">
@@ -24,7 +25,7 @@
               <nav class="header_menu">
                   <ul class="header_list">
                       <li><a href="#home" class="header_content">Home</a></li>
-                      <li><a href="#about" class="header_content">About</a></li>
+                      <li><a href="./pages/about.html" class="header_content">About</a></li>
                       <li><a href="#contact" class="header_content">Contact</a></li>
                       <li><a href="#trending" class="header_content">Trending</a></li>
                   </ul>
