feat: recreating the project, new base with vue.js

--- a/index.html
+++ b/index.html
@@ -1,146 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Dark Zone</title>
-      <link rel="stylesheet" href="./css/reset.css">
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="./css/header.css">
-      <link rel="stylesheet" href="./css/styles.css">
-      <link rel="stylesheet" href="./css/search.css">
-      <link rel="stylesheet" href="./css/news.css">
-      <link rel="stylesheet" href="./css/trending.css">
-      <link rel="stylesheet" href="./css/footer.css">
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DarkZone Blog</title>
   </head>
-  <body id="home">
-      <header class="menu">
-          <div class="central">
-              <div class="logo">
-                  <a href="#home">
-                      <img class="header_image" src="assets/images/fleur-de-lis.png" alt="logo"/>
-                  </a>
-              </div>
-              <nav class="header_menu">
-                  <ul class="header_list">
-                      <li><a href="#home" class="header_content">Home</a></li>
-                      <li><a href="./pages/about.html" class="header_content">About</a></li>
-                      <li><a href="#contact" class="header_content">Contact</a></li>
-                      <li><a href="#trending" class="header_content">Trending</a></li>
-                  </ul>
-              </nav>
-          </div>
-      </header>
-      <main>
-          <section class="background">
-              <div class="lines">
-                  <div class="line"></div>
-                  <div class="line"></div>
-                  <div class="line"></div>
-              </div>
-          </section>
-          <section id="search">
-              <nav class="adjust">
-                  <p class="search_text">I want search about...</h1>
-                  <input type="text" class="search_field" placeholder="Enter keywords">
-                  <button class="search_submit"><span>Search</span></button>
-              </nav>
-          </section>
-        <section class="news">
-            <div class="news_adjust">
-                <p class="news_text">News</p>
-                <article class="news_box">
-                    <div class="news_image" id="gentoo">
-                        <a class="news_image_link" href="./pages/gentoo.html">
-                            <img class="news_image_post" src="assets/images/gentoo.svg">
-                        </a>
-                        <div class="news_adjust_text">
-                            <h2 class="news_title_post"><a class="news_image_link" href="./pages/gentoo.html">Gentoo Quick Installation Guide</a></h2>
-                            <p class="news_text_post"> This is a guide I would use for installing Gentoo with systemd (merged-usr) as the init system of choice to the amd64 architecture (uefi). </p>
-                            <p class="news_autor_post">By Jabuxas, December 9, 2022</p>
-                        </div>
-                    </div>
-                </article>
-                <article class="">
-                    <div class="news_image" id="html">
-                        <a class="news_image_link" href="./pages/html.html">
-                            <img class="news_image_post" src="assets/images/html.png">
-                        </a>
-                        <div class="news_adjust_text">
-                            <h2 class="news_title_post"><a class="news_image_link" href="./pages/html.html">Basic of HTML Guide</a></h2>
-                            <p class="news_text_post"> This is a guide about how to use the basics syntax of the HTML and how you can learn to use it in your projects.</p>
-                            <p class="news_autor_post">By Akyua, December 9, 2022</p>
-                        </div>
-                    </div>
-                </article>
-                <article class="">
-                    <div class="news_image" id="arch">
-                        <a class="news_image_link" href="./pages/arch.html">
-                            <img class="news_image_post" src="assets/images/arch.png">
-                        </a>
-                        <div class="news_adjust_text">
-                            <h2 class="news_title_post"><a class="news_image_link" href="./pages/arch.html">Arch Linux Quick Installation Guide</a></h2>
-                            <p class="news_text_post"> How to install arch linux in the easy and quickly way. </p>
-                            <p class="news_autor_post">By Jabuxas, December 9, 2022</p>
-                        </div>
-                    </div>
-                </article>
-                <article class="">
-                    <div class="news_image" id="css">
-                        <a class="news_image_link" href="./pages/css.html">
-                            <img class="news_image_post" src="assets/images/css.svg">
-                        </a>
-                        <div class="news_adjust_text">
-                            <h2 class="news_title_post"><a class="news_image_link" href="./pages/css.html">Basic of CSS to Work Guide</a></h2>
-                            <p class="news_text_post"> Easy guide to learn the basic structures about CSS and how you'll utilize it in your projects. </p>
-                            <p class="news_autor_post">By Akyua, December 9, 2022</p>
-                        </div>
-                    </div>
-                </article>
-            </div>
-        </section>
-        <section class="trending" id="trending">
-            <div class="trending_adjust">
-                <h2 class="trending_title">Trending</h2>
-                <article class="trending_box">
-                    <nav class="trending_thumb" id="trending1">
-                        <a href="">
-                            <img src="assets/images/thumb.png" class="trending_image">
-                        </a>
-                        <h2><a href="" class="trending_tile_link">Configuration Gentoo</a></h2>
-                        <div class="trending_description">
-                            <p class="trending_text">The tutorial about how to configure gentoo, w/ new visual and new settings.</p>
-                            <hr>
-                            <p class="trending_text trending_text_autor">By Jabuxas, December 1, 2022</p>
-                        </div>
-                    </nav>
-                    <nav class="trending_thumb" id="trending2">
-                        <a href="">
-                            <img src="assets/images/thumbjs.jpg" class="trending_image">
-                        </a>
-                        <h2><a href="" class="trending_tile_link">Javascript Functions</a></h2>
-                        <div class="trending_description">
-                            <p class="trending_text">The tutorial about how to use function in javascript, with a few examples.</p>
-                            <hr>
-                            <p class="trending_text trending_text_autor">By Akyua, December 1, 2022</p>
-                        </div>
-                    </nav>
-                </article>
-            </div>
-        </section>
-        <script src="js/divnews.js"></script> 
-        <script src="js/divtrending.js"></script> 
-      </main>
-      <footer class="footer">
-        <div class="footer_adjust">
-            <div class="footer_adjust_layer">
-                <nav class="footer_developers">
-                    <p class="footer_text">Developed by: <a href=https://github.com/akyua class="footer_link">Akyua</a> and <a href=https://github.com/jabuxas class="footer_link">Jabuxas</a></p>
-                </nav>
-                <p class="copyright">&copy; Copyright DarkZone Blog - 2022</p>
-            </div>
-        </div>
-      </footer>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
